// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsumersResults /> renders Consumer results correctly 1`] = `
<div
  className="kubevirt-consumers__results"
>
  <ConsumerItem
    description="description"
    key="0"
    label="label"
    now={30}
  />
  <ConsumerItem
    description="description"
    key="1"
    label="label"
    now={30}
  />
</div>
`;

exports[`<ConsumersResults /> renders Loading Consumers correctly 1`] = `
<div
  className="kubevirt-consumers__results"
>
  <InlineLoading
    size="md"
  />
</div>
`;

exports[`<ConsumersResults /> renders Not available Consumers correctly 1`] = `
<div
  className="kubevirt-consumers__results"
>
  Not available
</div>
`;
